[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "eventlet>=0.41.0",
    "flask>=3.1.3",
    "flask-socketio>=5.6.1",
    "gevent>=26.5.0",
    "gevent-websocket>=0.10.1",
    "gunicorn>=26.0.0",
    "requests>=2.34.2",
    "selenium>=4.46.0",
]
